# openglesPrac

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/doit/openglesprac/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_doit_openglesprac_MyNativeRender.cpp  native-lib.cpp
app/src/main/cpp/Chapter_2/: CMakeLists.txt
app/src/main/cpp/egl/: EglCore.cpp  EglCore.h
app/src/main/java/com/doit/openglesprac/: MainActivity.java  MyGLRender.java  MyGLSurfaceView.java  MyNativeRender.java  NativeEntry.java
app/src/main/java/com/doit/openglesprac/adapter/: MyRecyclerViewAdapter.java
app/src/main/java/com/doit/openglesprac/egl/: NativeEglRender.java  com_doit_openglesprac_egl_NativeEglRender.h
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/doit/openglesprac/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
